--- a/digitalbanking-screens/src/main/webapp/css/common.css
+++ b/digitalbanking-screens/src/main/webapp/css/common.css
@@ -1,46 +1,52 @@
+body
+{
+	background:rgb(241,241,241);
+}
 .tile-style
 {
-   height: 189px;
+   height: 100%;
     text-align: center;
     /* display: -webkit-inline-box; */
-    padding-top: 28%;
     font-weight: bold;
     font-size: 17px;
     /* background: rgb(247,247,247); */
     border: 1px solid #ccc;
-    box-shadow: 0px 3px 8px rgb(120,100,100) !important;
-    color:black;
-    -webkit-box-shadow : 0px 3px 8px rgb(120,100,100) !important;         
-    -moz-box-shadow: 0px 3px 8px rgb(120,100,100) !important;
+    background-color: white;
 }
 .tile-row-margin
 {
-margin-top: 15px;
+	margin: 15px;
+    /* border: 0px; */
+    height: 250px;
 }
 .header-style
 {
-	height: 60px;
-    background: #428bca;
+	height: 57px;
+    background: white;
     width: 100%;
+    -webkit-box-shadow: 0px 2px 8px #ccc !important;
+    margin-bottom:4px;
 }
 .header-logo
 {
-color: white;
-    font-size: 40px;
-    font-style: italic;
+	color: rgb(255,81,12);
+    font-size: 28px;
+    /* font-style: italic; */
     font-weight: bold;
+    margin-top: 8px;
 }
 .header-menu-style
 {
-float:right;
+	float: right;
+	color: rgb(95,99,115);
+	font-weight: bold;
+	margin-top: 3px;
+    font-size: 11px;
 }
 .header-menu-logout
 {
-    float: right;
-    color: white;
-    border: 1px solid;
-    margin-top: 8%;
-    padding: 4px;
+    font-size: 11px;
+    color: inherit;
 }
 #panel-login{
 	position:fixed;
@@ -57,12 +63,73 @@ float:right;
     border: 1px solid rgb(212,212,212);
     width: 100%; 
     height: 100%;
+    font-size: 13px;
 }
 .header-user-style
 {
-	padding-top: 5%;
-    color: white;
     text-align: right;
+}
+.screen-title
+{
+	font-size: 13px;
+    font-weight: normal;
+    margin-bottom: 20px;
+    color: #1d70aa;
+    font-weight: bold;
+    margin: 15px;
+    margin-left: 16px;
+    text-align:left;
+}
+.transaction-link-style
+{
+	font-style: italic;
+    color: blue;
+} 
+.navbar-default .navbar-nav > li.dropdown > a:hover,
+.navbar-default .navbar-nav > li.dropdown > a:focus {
+    background-color: rgb(231, 231, 231);
+    color: rgb(85, 85, 85);
+}
+li.dropdown:hover > .dropdown-menu {
+    display: block;
+}
+.dropdown .dropdown-menu {
+    -webkit-transition: all 0.4s;
+    -moz-transition: all 0.3s;
+    -ms-transition: all 0.3s;
+    -o-transition: all 0.3s;
+    transition: all 0.3s;
+    display: block;
+    overflow: hidden;
+    opacity: 0;
+    font-size: 13px;
+}
+
+.dropdown.open .dropdown-menu {
+    max-height: 300px;
+    opacity: 1;
+}
+.navbar-default
+{
+	background:transparent !important;
+	position: absolute;
+    right: 0;
+    border:0px;
+}
+.navbar-default .navbar-nav>li>a
+{
+	color: rgb(117,92,62) !important;
+}
+.menu-row
+{
+	font-size: 14px;
+    font-weight: normal;
+    margin-top: 3px;
+}
+.home-container
+{
+	background:rgb(241,241,241);
+	width:100%;
 }
 .footer-style
 {
@@ -108,4 +175,61 @@ float:right;
 }
 .tab-style{
 	padding:30px;
+}
+.box {
+    padding: 0 5px 0 5px;
+    height:100%;
+}
+.box .inner {
+    background-color: #fff;
+}
+.transaction-box
+{
+	width: 57%;
+}
+.dashboard-title
+{
+	font-weight:bold;
+	font-size: 14px;
+    text-align: left;
+    border-bottom: 1px solid #ccc;
+    padding-top: 3px;
+    padding-bottom: 4px;
+    margin-left: -15px;
+    margin-right: -15px;
+    padding-left: 6px;
+    color: rgb(58,141,191);
+}
+.dashboard-margin
+{
+	margin-left: -7px;
+    margin-right: -7px;
+}
+.summary-main-row
+{
+	height: 220px;
+}
+.summary-main-column
+{
+	height: inherit;
+    font-weight: normal;
+    font-size: 14px;
+    text-align: left;
+    /* padding-left: 21px; */
+    border-right: 1px solid #ccc;
+}
+.summary-sub-row
+{
+	padding: 9px;
+    border-bottom: 1px solid #ccc;
+    cursor:pointer;
+}
+.summary-active
+{
+	background: rgb(231,231,231);
+    font-weight: bold;
+}
+.summary-sub-row:hover
+{
+	background: rgb(231,231,231);
 }
