--- a/digitalbanking-screens/src/main/webapp/css/rule-custom.css
+++ b/digitalbanking-screens/src/main/webapp/css/rule-custom.css
@@ -119,7 +119,6 @@ ul.objects li{padding:4px 4px 4px 20px; background:#fff}
 .red{color:#c00; font-size:20px;}
 .t-head{ text-align:center}
 .ebtn{ background:none; border:none}
-.navbar-default{ border-color:#2386ae #e7e7e7 #e7e7e7;}
 .paginate_button.current{background:linear-gradient(to bottom, #baf9ba 0%, #4ab54a 100%);}
 .modal-dialog {margin: 30px auto; width: 600px;} /* Initial margin was 150px */
 #restable_length label, #restable_filter label{font-weight:normal}
@@ -191,8 +190,7 @@ multiselect .btn.btn-default{background:none; padding:1px;}
 .box {
     margin-bottom: 20px;
     background-color: #fff;
-    border: 1px solid transparent;
-    border-radius: 4px;
+    border: 1px solid #ccc;
 }
 
 .box > h3 {
