--- a/digitalbanking-screens/src/main/webapp/includes/AccountsSummary.html
+++ b/digitalbanking-screens/src/main/webapp/includes/AccountsSummary.html
@@ -1,6 +1,6 @@
-<div class="container">
-<div class="row">Accounts Summary</div>
-<div class="row">
+<div class="container-fluid">
+<div class="row-fluid screen-title">Accounts Summary</div>
+<div class="row-fluid">
         <div class="col-lg-12">
                 <div class="gridStyle" ng-grid="gridOptions">
         </div>
