--- a/digitalbanking-screens/src/main/webapp/includes/home.html
+++ b/digitalbanking-screens/src/main/webapp/includes/home.html
@@ -1,24 +1,47 @@
-<div class="container">
+<div class="container home-container">
 <div class="row tile-row-margin">
-<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                <a href="#/accountSummary"><div class="panel panel-primary tile-style">
-                Accounts
-                </div></a>
+	<div class="col-lg-12 col-md-6 col-sm-12 col-xs-12 tile-style">
+		<div class="row dashboard-title">Summary</div>
+		<div class="row summary-main-row">
+			<div class="col-xs-2 summary-main-column">
+				<div class="row summary-sub-row" ng-class="{ 'summary-active': isSet(1) }" ng-click="setTab(1)">
+					Accounts
+				</div>
+				<div class="row summary-sub-row" ng-class="{ 'summary-active': isSet(2) }" ng-click="setTab(2)">
+					Loans
+				</div>
+				<div class="row summary-sub-row" ng-class="{ 'summary-active': isSet(3) }" ng-click="setTab(3)">
+					Cards
+				</div>
+				<div class="row summary-sub-row" ng-class="{ 'summary-active': isSet(4) }" ng-click="setTab(4)">
+					Investments
+				</div>
+			</div>
+			<div class="col-xs-10">
+				<div ng-show="isSet(1)">
+					<account-summary-directive></account-summary-directive>
+				</div>
+				<div ng-show="isSet(2)">
+					Loan Summary
+				</div>
+				<div ng-show="isSet(3)">
+					Card Summary
+				</div>
+				<div ng-show="isSet(4)">
+					Investment Summary
+				</div>
+			</div>
+		</div>
+	</div>
 </div>
-<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                <a href="#/accountSummary"><div class="panel panel-primary tile-style">
-                Loans
-                </div></a>
-</div>
-<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                <a href="#/accountSummary"><div class="panel panel-primary tile-style">
-                Cards
-                </div></a>
-</div>
-<div class="col-lg-3 col-md-6 col-sm-12 col-xs-12">
-                <a href="#/accountSummary"><div class="panel panel-primary tile-style">
-                Transactions
-                </div></a>
-</div>
+<div class="row tile-row-margin">
+	<div class="col-md-6 box transaction-box">
+		<div class="dashboard-title dashboard-margin">Transactions</div>
+        <div class="inner">Hello</div>
+	</div>
+	<div class="col-md-5 box pull-right">
+			<div class="dashboard-title dashboard-margin">Payee List</div>
+	        <div class="inner">Hello</div>
+	</div>
 </div>
 </div>
