--- a/digitalbanking-screens/src/main/webapp/includes/AccountsSummary.html
+++ b/digitalbanking-screens/src/main/webapp/includes/AccountsSummary.html
@@ -2,7 +2,7 @@
 <div class="row-fluid screen-title">Accounts Summary</div>
 <div class="row-fluid">
         <div class="col-lg-12">
-                <div class="gridStyle" ng-grid="gridOptions">
+                <div class="gridStyle" ng-grid="accGridOptions">
         </div>
         </div>
 </div>
