--- a/digitalbanking-screens/src/main/webapp/includes/header.html
+++ b/digitalbanking-screens/src/main/webapp/includes/header.html
@@ -1,7 +1,7 @@
 <div class="container header-style">
 <div class="row">
 <div class="col-xs-4 header-logo">
-DigiBank
+DigiBank v1
 </div>
 <div class="col-xs-4">
 </div>
